Build: Enable to build and run with Java 25.